--- a/etc/language/code-list.txt
+++ b/etc/language/code-list.txt
@@ -46,6 +46,7 @@ nickname
 menu
 permission
 selected delete
+admin main
 no of new members
 list
 no of members
@@ -68,23 +69,106 @@ more
 incident
 total
 view all history
+<!--탈퇴/회원수 -->
+<!--차단/회원수 -->
+resigned
+blocked
+unblock
+block
+mobile
+i-pin
+administrator
+normal
+"._l("no data")."
 to delete user
 member management
-no. of member
-no. of member after
-_block
-_block after
-search option
-member id
-nickname
-name
-permission
-landline
-mobile
-point
-registered date
-referral
-search keyword
-required
-admin mode
-name after
+list all
+no of member')?>
+no of member after')?>
+no of blocked')?><?
+no of blocked after')?>
+no of resign')?><?
+no of resign after')?>
+search member')?><
+member id')?><
+nickname')?><
+name')?><
+permission')?><
+landline')?><
+mobile')?><
+point')?><
+registered date')?><
+referral')?><
+search keyword')?><
+required')?><
+"<?php echo _l("search")?>"
+add member')?><
+list')?></
+all members')?><
+id')?><
+identity')?><
+mobile')?><
+status')?>/
+recent visit')?><
+access')?><
+group')?>
+management')?><
+email')?><
+received')?>
+adult')?><
+authorization')?>
+point')?>
+registered date')?>
+i-pin')?><
+seleted modification')?>
+seleted deletion')?>
+please select at least two')?>
+are you sure to delete this data you select?')?>
+group
+information')?>
+in public')?><
+block')?><
+"._l("no member data")."
+"._l("you cannot delete the admin who logged in currently")."
+"._l("super admin cannot be deleted.")."
+"._l("you cannot delete the member who have the same or higher level than yours.")."
+go to post')?>
+admin info')?>
+basic setting')?>
+community')?>
+logout')?>
+<!--외부로//그인-->
+<!-- 현재 접속//자수-->
+go to post')?>
+search all in site')?>
+search keyword')?><
+required')?>
+"<?php echo _l("search")?>"
+admin')?>
+edit info')?>
+logout')?>
+register')?>
+login')?>
+1:1 support')?>
+current users')?>
+new post')?>
+main menu')?>
+no created menu')?>
+member login')?>
+member id')?>
+required')?>
+password')?>
+register')?>
+find password')?>
+remember me')?>
+my profile')?>
+admin mode')?>
+unreaded')?>
+message')?>
+point')?>
+scrap')?>
+edit info')?>
+logout')?>
+<!-- 인기//검색어 시작
+<!-- 인기//검색어 끝
+popular keyword')?>
